# audio-spectrum-analyzer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: audio.h  gui.h  math_utils.h
src/: audio.cpp  gui.cpp  main.cpp  math_utils.cpp
